@startuml tecton
  IOnRound <|.. Tecton 
  Tecton  -- Tecton : neighbor
  'Tecton *-- "0..*" Entity
  class Tecton {
    {static} maxThreads : Integer
    {static} maxStems : Integer
    
    neighbors : List<Tecton>

    stem : MushroomStem
    threads : List<MushroomThread>
    spores : List<Spore>
    insects : List<Insect>  

    'addNeighbour(Tecton) : void
    'addStem(MushroomStem stem) : void
    'removeStem() : void
    'addThread(MushroomThread thread) : void
    'removeThread(MushroomThread thread) : void
    'addSpore(Spore spore) : void
    'removeSpore(Spore spore) : void
    'addInsect(Insect insect) : void
    'removeInsect(Insect insect) : void

    split() : Tecton

    onRound() : void
  }

  Tecton *-- "0..1" MushroomStem 
  Tecton *-- "0..*" MushroomThread
  
  Tecton *-- "0..*" Spore
  Tecton *-- "0..*" Insect
  'SingleThreadedTecton *-- "0..1" MushroomStem
  'SingleThreadedTecton "2" *-- "0..1" MushroomThread
  Tecton <|-- SingleThreadedTecton
  class SingleThreadedTecton {
    {static} maxThreads = 1 : Integer
  }


  'BodylessTecton "2" *-- "0..*" MushroomThread
  Tecton <|-- StemlessTecton
  class StemlessTecton {
    {static} maxStems = 0 : Integer
  }

  ' ThreadConsumingTecton *-- "0..1" MushroomStem
  'ThreadConsumingTecton "2" *-- "0..*" MushroomThread
  Tecton <|-- ThreadConsumingTecton
  class ThreadConsumingTecton {
    onRound() : void
  }
@enduml